--- a/notebook/example.ipynb
+++ b/notebook/example.ipynb
@@ -46,9 +46,9 @@
       "\n",
       "06/30/2022  12:41 PM    <DIR>          .\n",
       "06/30/2022  12:41 PM    <DIR>          ..\n",
-      "07/01/2022  10:31 AM            11,750 example.ipynb\n",
-      "               1 File(s)         11,750 bytes\n",
-      "               2 Dir(s)  249,361,358,848 bytes free\n"
+      "07/01/2022  03:56 PM            13,327 example.ipynb\n",
+      "               1 File(s)         13,327 bytes\n",
+      "               2 Dir(s)  247,161,782,272 bytes free\n"
      ]
     }
    ],
@@ -109,7 +109,7 @@
     {
      "data": {
       "text/plain": [
-       "'housing_logs\\\\log_01 - 07 - 2022__10 - 32 - 57.log'"
+       "'housing_logs\\\\log_01 - 07 - 2022__03 - 56 - 49.log'"
       ]
      },
      "execution_count": 7,
@@ -456,9 +456,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "read_csv() missing 1 required positional argument: 'filepath_or_buffer'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\arun7\\Desktop\\projects\\ML-Project\\notebook\\example.ipynb Cell 28'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/arun7/Desktop/projects/ML-Project/notebook/example.ipynb#ch0000027?line=0'>1</a>\u001b[0m pd\u001b[39m.\u001b[39;49mread_csv()\n",
+      "File \u001b[1;32mc:\\Users\\arun7\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\util\\_decorators.py:311\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    305\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m>\u001b[39m num_allow_args:\n\u001b[0;32m    306\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m    307\u001b[0m         msg\u001b[39m.\u001b[39mformat(arguments\u001b[39m=\u001b[39marguments),\n\u001b[0;32m    308\u001b[0m         \u001b[39mFutureWarning\u001b[39;00m,\n\u001b[0;32m    309\u001b[0m         stacklevel\u001b[39m=\u001b[39mstacklevel,\n\u001b[0;32m    310\u001b[0m     )\n\u001b[1;32m--> 311\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "\u001b[1;31mTypeError\u001b[0m: read_csv() missing 1 required positional argument: 'filepath_or_buffer'"
+     ]
+    }
+   ],
    "source": [
     "pd.read_csv()"
    ]
